--- a/src/views/teamInfo/teamInfo.template.html
+++ b/src/views/teamInfo/teamInfo.template.html
@@ -1,5 +1,5 @@
-<div class="full-screen-loader">
-  <div class="loader-overlay" ng-if="$ctrl.loadingTeamInfo">
+<div class="full-screen-loader" ng-if="$ctrl.loadingTeamInfo">
+  <div class="loader-overlay">
     <div class="loader-inner line-scale">
       <div></div><div></div><div></div><div></div><div></div>
     </div>
@@ -7,47 +7,51 @@
 </div>
 
 <div class="container" ng-if="$ctrl.loadingTeamInfoFailed">
-  <div class="col-md-12">Error loading team info.</div>
+  <div class="row">
+    <div class="col-md-12">Error loading team info.</div>
+  </div>
 </div>
 
 <div class="container title-container" ng-if="!$ctrl.loadingTeamInfo && !$ctrl.loadingTeamInfoFailed">
-  <div class="col-md-12">
-    <div class="row">
-      <div class="col-sm-6">
-        <h3><span ng-bind="$ctrl.teamInfo.Name"></span></h3>
-      </div>
-      <div class="col-sm-6">
-        <div class="row">
-          <div class="col-xs-6">
-            <div class="team-info-group">
-              <label>GM:</label>
-              <span ng-bind="$ctrl.teamInfo.GMName || 'None'"></span>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-sm-6">
+          <h3><span ng-bind="$ctrl.teamInfo.Name"></span></h3>
+        </div>
+        <div class="col-sm-6">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="team-info-group">
+                <label>GM:</label>
+                <span ng-bind="$ctrl.teamInfo.GMName || 'None'"></span>
+              </div>
+              <div class="team-info-group">
+                <label>Coach: </label>
+                <span ng-bind="$ctrl.teamInfo.CoachName"></span>
+              </div>
+              <div class="team-info-group" ng-if="$ctrl.league === 'farm'">
+                <label>Pro Team:</label>
+                <a ng-href="{{ '#!/teams/pro/' + $ctrl.teamInfo.UniqueID }}">
+                  <span ng-bind="$ctrl.teamInfo.AssociatedTeamAbbre"></span>
+                </a>
+              </div>
+              <div class="team-info-group" ng-if="$ctrl.league === 'pro'">
+                <label>Farm Team:</label>
+                <a ng-href="{{ '#!/teams/farm/' + $ctrl.teamInfo.UniqueID }}">
+                  <span ng-bind="$ctrl.teamInfo.AssociatedTeamAbbre"></span>
+                </a>
+              </div>
             </div>
-            <div class="team-info-group">
-              <label>Coach: </label>
-              <span ng-bind="$ctrl.teamInfo.CoachName"></span>
-            </div>
-            <div class="team-info-group" ng-if="$ctrl.league === 'farm'">
-              <label>Pro Team:</label>
-              <a ng-href="{{ '#!/teams/pro/' + $ctrl.teamInfo.UniqueID }}">
-                <span ng-bind="$ctrl.teamInfo.AssociatedTeamAbbre"></span>
-              </a>
-            </div>
-            <div class="team-info-group" ng-if="$ctrl.league === 'pro'">
-              <label>Farm Team:</label>
-              <a ng-href="{{ '#!/teams/farm/' + $ctrl.teamInfo.UniqueID }}">
-                <span ng-bind="$ctrl.teamInfo.AssociatedTeamAbbre"></span>
-              </a>
-            </div>
-          </div>
-          <div class="col-xs-6">
-            <div class="team-info-group">
-              <label>Team Morale: </label>
-              <span ng-bind="$ctrl.teamInfo.Morale"></span>
-            </div>
-            <div class="team-info-group">
-              <label>Team Overall: </label>
-              <span ng-bind="$ctrl.teamInfo.TeamOverall"></span>
+            <div class="col-xs-6">
+              <div class="team-info-group">
+                <label>Team Morale: </label>
+                <span ng-bind="$ctrl.teamInfo.Morale"></span>
+              </div>
+              <div class="team-info-group">
+                <label>Team Overall: </label>
+                <span ng-bind="$ctrl.teamInfo.TeamOverall"></span>
+              </div>
             </div>
           </div>
         </div>
@@ -58,83 +62,87 @@
 
 <nav class="navbar navbar-default" ng-if="!$ctrl.loadingTeamInfo && !$ctrl.loadingTeamInfoFailed">
   <div class="container">
-    <div class="col-md-12">
-      <ul class="nav navbar-nav">
-        <li ng-class="{ active: $ctrl.page === 'Roster' }">
-          <a ng-click="$ctrl.open('Roster')">Roster</a>
-        </li>
-        <li ng-class="{ active: $ctrl.page === 'PlayerStats' }">
-          <a ng-click="$ctrl.open('PlayerStats')">Player Stats</a>
-        </li>
-        <li ng-class="{ active: $ctrl.page === 'PlayerInfo' }">
-          <a ng-click="$ctrl.open('PlayerInfo')">Player Info</a>
-        </li>
-        <li ng-class="{ active: $ctrl.page === 'TeamStats' }">
-          <a ng-click="$ctrl.open('TeamStats')">Team Stats</a>
-        </li>
-        <li ng-class="{ active: $ctrl.page === 'Schedule' }">
-          <a ng-click="$ctrl.open('Schedule')">Schedule</a>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="col-md-12">
+        <ul class="nav navbar-nav">
+          <li ng-class="{ active: $ctrl.page === 'Roster' }">
+            <a ng-click="$ctrl.open('Roster')">Roster</a>
+          </li>
+          <li ng-class="{ active: $ctrl.page === 'PlayerStats' }">
+            <a ng-click="$ctrl.open('PlayerStats')">Player Stats</a>
+          </li>
+          <li ng-class="{ active: $ctrl.page === 'PlayerInfo' }">
+            <a ng-click="$ctrl.open('PlayerInfo')">Player Info</a>
+          </li>
+          <li ng-class="{ active: $ctrl.page === 'TeamStats' }">
+            <a ng-click="$ctrl.open('TeamStats')">Team Stats</a>
+          </li>
+          <li ng-class="{ active: $ctrl.page === 'Schedule' }">
+            <a ng-click="$ctrl.open('Schedule')">Schedule</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
 
 <div class="container" ng-if="!$ctrl.loadingTeamInfo && !$ctrl.loadingTeamInfoFailed">
-  <div class="col-md-12">
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerInfo" ng-show="$ctrl.page === 'PlayerInfo'">
-      <div class="panel-heading">Skaters</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.skaterInfoGridOptions"></grid>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerInfo" ng-show="$ctrl.page === 'PlayerInfo'">
+        <div class="panel-heading">Skaters</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.skaterInfoGridOptions"></grid>
+        </div>
       </div>
-    </div>
 
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerInfo"  ng-show="$ctrl.page === 'PlayerInfo'">
-      <div class="panel-heading">Goalies</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.goalieInfoGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerInfo"  ng-show="$ctrl.page === 'PlayerInfo'">
+        <div class="panel-heading">Goalies</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.goalieInfoGridOptions"></grid>
+        </div>
       </div>
-    </div>
 
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.Roster" ng-show="$ctrl.page === 'Roster'">
-      <div class="panel-heading">Skaters</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.skaterRatingsGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.Roster" ng-show="$ctrl.page === 'Roster'">
+        <div class="panel-heading">Skaters</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.skaterRatingsGridOptions"></grid>
+        </div>
       </div>
-    </div>
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.Roster" ng-show="$ctrl.page === 'Roster'">
-      <div class="panel-heading">Goalies</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.goalieRatingsGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.Roster" ng-show="$ctrl.page === 'Roster'">
+        <div class="panel-heading">Goalies</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.goalieRatingsGridOptions"></grid>
+        </div>
       </div>
-    </div>
 
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerStats" ng-show="$ctrl.page === 'PlayerStats'">
-      <div class="panel-heading">Skaters</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.skaterStatsGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerStats" ng-show="$ctrl.page === 'PlayerStats'">
+        <div class="panel-heading">Skaters</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.skaterStatsGridOptions"></grid>
+        </div>
       </div>
-    </div>
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerStats" ng-show="$ctrl.page === 'PlayerStats'">
-      <div class="panel-heading">Goalies</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.goalieStatsGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.PlayerStats" ng-show="$ctrl.page === 'PlayerStats'">
+        <div class="panel-heading">Goalies</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.goalieStatsGridOptions"></grid>
+        </div>
       </div>
-    </div>
 
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.TeamStats" ng-show="$ctrl.page === 'TeamStats'">
-      <div class="panel-heading">Overview</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.teamStatsGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.TeamStats" ng-show="$ctrl.page === 'TeamStats'">
+        <div class="panel-heading">Overview</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.teamStatsGridOptions"></grid>
+        </div>
       </div>
-    </div>
 
-    <div class="panel panel-default" ng-if="$ctrl.openedPages.Schedule" ng-show="$ctrl.page === 'Schedule'">
-      <div class="panel-heading">Schedule</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.scheduleGridOptions"></grid>
+      <div class="panel panel-default" ng-if="$ctrl.openedPages.Schedule" ng-show="$ctrl.page === 'Schedule'">
+        <div class="panel-heading">Schedule</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.scheduleGridOptions"></grid>
+        </div>
       </div>
-    </div>
 
+    </div>
   </div>
 </div>
