--- a/src/views/trades/trades.template.html
+++ b/src/views/trades/trades.template.html
@@ -1,9 +1,11 @@
 <div class="container">
-  <div class="col-md-12">
-    <div class="panel panel-default">
-      <div class="panel-heading">Trade History</div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.gridOptions"></grid>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">Trade History</div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.gridOptions"></grid>
+        </div>
       </div>
     </div>
   </div>
