--- a/src/views/goalieInfo/goalieInfo.template.html
+++ b/src/views/goalieInfo/goalieInfo.template.html
@@ -1,35 +1,37 @@
 <div class="container title-container">
-  <div class="col-md-12">
-    <div class="row">
-      <div class="col-sm-6">
-        <h3><span ng-bind="$ctrl.goalieInfo.Name"></span></h3>
-        <span ng-bind="$ctrl.goalieInfo.TeamName"></span>
-      </div>
-      <div class="col-sm-6">
-        <div class="row">
-          <div class="col-xs-6">
-            <div class="skater-info-group">
-              <label>Position:</label>
-              <span>G</span>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-sm-6">
+          <h3><span ng-bind="$ctrl.goalieInfo.Name"></span></h3>
+          <span ng-bind="$ctrl.goalieInfo.TeamName"></span>
+        </div>
+        <div class="col-sm-6">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="skater-info-group">
+                <label>Position:</label>
+                <span>G</span>
+              </div>
+              <div class="skater-info-group">
+                <label>Age: </label>
+                <span ng-bind="$ctrl.goalieInfo.Age"></span>
+              </div>
+              <div class="skater-info-group">
+                <label>Salary: </label>
+                <span ng-if="$ctrl.goalieInfo.Salary1" ng-bind="$ctrl.goalieInfo.Salary1 | currency : '$' : 0"></span>
+                <span ng-if="!$ctrl.goalieInfo.Salary1">N/A</span>
+              </div>
             </div>
-            <div class="skater-info-group">
-              <label>Age: </label>
-              <span ng-bind="$ctrl.goalieInfo.Age"></span>
-            </div>
-            <div class="skater-info-group">
-              <label>Salary: </label>
-              <span ng-if="$ctrl.goalieInfo.Salary1" ng-bind="$ctrl.goalieInfo.Salary1 | currency : '$' : 0"></span>
-              <span ng-if="!$ctrl.goalieInfo.Salary1">N/A</span>
-            </div>
-          </div>
-          <div class="col-xs-6">
-            <div class="skater-info-group">
-              <label>Weight: </label>
-              <span ng-bind="$ctrl.goalieInfo.Weight"></span>
-            </div>
-            <div class="skater-info-group">
-              <label>Height: </label>
-              <span ng-bind="$ctrl.goalieInfo.Height | height"></span>
+            <div class="col-xs-6">
+              <div class="skater-info-group">
+                <label>Weight: </label>
+                <span ng-bind="$ctrl.goalieInfo.Weight"></span>
+              </div>
+              <div class="skater-info-group">
+                <label>Height: </label>
+                <span ng-bind="$ctrl.goalieInfo.Height | height"></span>
+              </div>
             </div>
           </div>
         </div>
@@ -40,107 +42,111 @@
 
 <nav class="navbar navbar-default">
   <div class="container">
-    <div class="col-md-12">
-      <ul class="nav navbar-nav">
-        <li ng-class="{ active: $ctrl.page === 'GoalieInfo' }">
-          <a ng-click="$ctrl.page = 'GoalieInfo'">Player Info</a>
-        </li>
-        <li ng-class="{ active: $ctrl.page === 'Compare' }">
-          <a ng-click="$ctrl.page = 'Compare'">Compare</a>
-        </li>
-      </ul>
+    <div class="row">
+      <div class="col-md-12">
+        <ul class="nav navbar-nav">
+          <li ng-class="{ active: $ctrl.page === 'GoalieInfo' }">
+            <a ng-click="$ctrl.page = 'GoalieInfo'">Player Info</a>
+          </li>
+          <li ng-class="{ active: $ctrl.page === 'Compare' }">
+            <a ng-click="$ctrl.page = 'Compare'">Compare</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
 
 <div class="container">
-  <div class="col-md-12">
-    <div class="panel panel-default" ng-show="$ctrl.page === 'GoalieInfo'">
-      <div class="panel-heading">Player Info</div>
-      <div class="panel-body skater-info-full">
-        <div class="col-xs-6 col-sm-3">
-          <div class="skater-info-group">
-            <label>Skating</label>
-            <span ng-bind="$ctrl.goalieInfo.SK"></span>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default" ng-show="$ctrl.page === 'GoalieInfo'">
+        <div class="panel-heading">Player Info</div>
+        <div class="panel-body skater-info-full">
+          <div class="col-xs-6 col-sm-3">
+            <div class="skater-info-group">
+              <label title="Skating">Skating</label>
+              <span ng-bind="$ctrl.goalieInfo.SK"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Durability">Durability</label>
+              <span ng-bind="$ctrl.goalieInfo.DU"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Endurance">Endurance</label>
+              <span ng-bind="$ctrl.goalieInfo.EN"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Size">Size</label>
+              <span ng-bind="$ctrl.goalieInfo.SZ"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Agility">Agility</label>
+              <span ng-bind="$ctrl.goalieInfo.AG"></span>
+            </div>
           </div>
-          <div class="skater-info-group">
-            <label>Durability</label>
-            <span ng-bind="$ctrl.goalieInfo.DU"></span>
+          <div class="col-xs-6 col-sm-3">
+            <div class="skater-info-group">
+              <label title="Rebound Control">Rebound Control</label>
+              <span ng-bind="$ctrl.goalieInfo.RB"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Style Control">Style Control</label>
+              <span ng-bind="$ctrl.goalieInfo.SC"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Hand Speed">Hand Speed</label>
+              <span ng-bind="$ctrl.goalieInfo.HS"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Reaction Time">Reaction Time</label>
+              <span ng-bind="$ctrl.goalieInfo.RT"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Puck Handling">Puck Handling</label>
+              <span ng-bind="$ctrl.goalieInfo.PH"></span>
+            </div>
           </div>
-          <div class="skater-info-group">
-            <label>Endurance</label>
-            <span ng-bind="$ctrl.goalieInfo.EN"></span>
+          <div class="col-xs-6 col-sm-3">
+            <div class="skater-info-group">
+              <label title="Penalty Shot">Penalty Shot</label>
+              <span ng-bind="$ctrl.goalieInfo.PS"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Experience">Experience</label>
+              <span ng-bind="$ctrl.goalieInfo.EX"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Leadership">Leadership</label>
+              <span ng-bind="$ctrl.goalieInfo.LD"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Potential">Potential</label>
+              <span ng-bind="$ctrl.goalieInfo.PO"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Morale">Morale</label>
+              <span ng-bind="$ctrl.goalieInfo.MO"></span>
+            </div>
           </div>
-          <div class="skater-info-group">
-            <label>Size</label>
-            <span ng-bind="$ctrl.goalieInfo.SZ"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Agility</label>
-            <span ng-bind="$ctrl.goalieInfo.AG"></span>
-          </div>
-        </div>
-        <div class="col-xs-6 col-sm-3">
-          <div class="skater-info-group">
-            <label>Rebound Control</label>
-            <span ng-bind="$ctrl.goalieInfo.RB"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Style Control</label>
-            <span ng-bind="$ctrl.goalieInfo.SC"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Hand Speed</label>
-            <span ng-bind="$ctrl.goalieInfo.HS"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Reaction Time</label>
-            <span ng-bind="$ctrl.goalieInfo.RT"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Puck Handling</label>
-            <span ng-bind="$ctrl.goalieInfo.PH"></span>
-          </div>
-        </div>
-        <div class="col-xs-6 col-sm-3">
-          <div class="skater-info-group">
-            <label>Penalty Shot</label>
-            <span ng-bind="$ctrl.goalieInfo.PS"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Experience</label>
-            <span ng-bind="$ctrl.goalieInfo.EX"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Leadership</label>
-            <span ng-bind="$ctrl.goalieInfo.LD"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Potential</label>
-            <span ng-bind="$ctrl.goalieInfo.PO"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Morale</label>
-            <span ng-bind="$ctrl.goalieInfo.MO"></span>
-          </div>
-        </div>
-        <div class="col-xs-6 col-sm-3">
-          <div class="skater-info-group">
-            <label>Overall</label>
-            <span ng-bind="$ctrl.goalieInfo.Overall"></span>
-          </div>
-          <div class="skater-info-group">
-            <label>Condition</label>
-            <span ng-bind="$ctrl.goalieInfo.Condition"></span>
+          <div class="col-xs-6 col-sm-3">
+            <div class="skater-info-group">
+              <label title="Overall">Overall</label>
+              <span ng-bind="$ctrl.goalieInfo.Overall"></span>
+            </div>
+            <div class="skater-info-group">
+              <label title="Condition">Condition</label>
+              <span ng-bind="$ctrl.goalieInfo.Condition"></span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="panel panel-default" ng-show="$ctrl.page === 'Compare'">
-      <div class="panel-heading">Compare</div>
-      <div class="panel-body">
-        <goalie-compare player="$ctrl.goalieInfo"></goalie-compare>
+      <div class="panel panel-default" ng-show="$ctrl.page === 'Compare'">
+        <div class="panel-heading">Compare</div>
+        <div class="panel-body">
+          <goalie-compare player="$ctrl.goalieInfo"></goalie-compare>
+        </div>
       </div>
     </div>
   </div>
