--- a/src/views/goalieRatings/goalieRatings.template.html
+++ b/src/views/goalieRatings/goalieRatings.template.html
@@ -1,21 +1,25 @@
 <nav class="navbar navbar-default navbar-stacked">
   <div class="container">
-    <div class="col-md-12">
-      <league-selector show-unassigned="true"
-        initial-league="$ctrl.goalieRatingsGridService.selectedLeague"
-        on-change="$ctrl.leagueUpdated(league)"></league-selector>
+    <div class="row">
+      <div class="col-md-12">
+        <league-selector show-unassigned="true"
+          initial-league="$ctrl.goalieRatingsGridService.selectedLeague"
+          on-change="$ctrl.leagueUpdated(league)"></league-selector>
+      </div>
     </div>
   </div>
 </nav>
 
 <div class="container">
-  <div class="col-md-12">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Goalies
-      </div>
-      <div class="panel-body">
-        <grid grid-options="$ctrl.gridOptions"></grid>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          Goalies
+        </div>
+        <div class="panel-body">
+          <grid grid-options="$ctrl.gridOptions"></grid>
+        </div>
       </div>
     </div>
   </div>
