--- a/src/views/skaterInfo/skaterInfo.scss
+++ b/src/views/skaterInfo/skaterInfo.scss
@@ -12,8 +12,17 @@
     margin-right: 20px;
     white-space: nowrap;
 
+    label {
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      padding-right: 15px;
+    }
+
     span {
-      float: right;
+      position: absolute;
+      right: 20;
+      display: inline-block;
     }
   }
 }
