--- a/src/views/teamList/teamList.template.html
+++ b/src/views/teamList/teamList.template.html
@@ -1,38 +1,40 @@
 <div class="container">
-  <div class="col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Pro
-      </div>
-      <div class="panel-body text-center">
-        <span ng-if="$ctrl.loadingProTeamListFailed">Error loading teams.</span>
-        <div class="loader-overlay" ng-if="$ctrl.loadingProTeamList">
-          <div class="loader-inner line-scale">
-            <div></div><div></div><div></div><div></div><div></div>
-          </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          Pro
         </div>
-        <div class="team-list-item" ng-repeat="team in $ctrl.proTeamList">
-          <a ng-href="{{ '#!/teams/pro/' + team.UniqueID }}"
-            title="{{ team.Name }}">{{ team.Abbre }}</a>
+        <div class="panel-body text-center">
+          <span ng-if="$ctrl.loadingProTeamListFailed">Error loading teams.</span>
+          <div class="loader-overlay" ng-if="$ctrl.loadingProTeamList">
+            <div class="loader-inner line-scale">
+              <div></div><div></div><div></div><div></div><div></div>
+            </div>
+          </div>
+          <div class="team-list-item" ng-repeat="team in $ctrl.proTeamList">
+            <a ng-href="{{ '#!/teams/pro/' + team.UniqueID }}"
+              title="{{ team.Name }}">{{ team.Abbre }}</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-md-6">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Farm
-      </div>
-      <div class="panel-body text-center">
-        <span ng-if="$ctrl.loadingFarmTeamListFailed">Error loading teams.</span>
-        <div class="loader-overlay" ng-if="$ctrl.loadingFarmTeamList">
-          <div class="loader-inner line-scale">
-            <div></div><div></div><div></div><div></div><div></div>
-          </div>
+    <div class="col-md-6">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          Farm
         </div>
-        <div class="team-list-item" ng-repeat="team in $ctrl.farmTeamList">
-          <a ng-href="{{ '#!/teams/farm/' + team.UniqueID }}"
-            title="{{ team.Name }}">{{ team.Abbre }}</a>
+        <div class="panel-body text-center">
+          <span ng-if="$ctrl.loadingFarmTeamListFailed">Error loading teams.</span>
+          <div class="loader-overlay" ng-if="$ctrl.loadingFarmTeamList">
+            <div class="loader-inner line-scale">
+              <div></div><div></div><div></div><div></div><div></div>
+            </div>
+          </div>
+          <div class="team-list-item" ng-repeat="team in $ctrl.farmTeamList">
+            <a ng-href="{{ '#!/teams/farm/' + team.UniqueID }}"
+              title="{{ team.Name }}">{{ team.Abbre }}</a>
+          </div>
         </div>
       </div>
     </div>
